src/z80asm/z80asm2/t/20-preproc/expected/undefine_11.txt
% z88dk-z80asm -v -dump-after-macro-expansion t/20-preproc//input/undefine_11.asm
Define constant: __CPU_ZILOG__ = 1
Define constant: __CPU_Z80__ = 1
Assembling t/20-preproc/input/undefine_11.asm...
t/20-preproc/input/undefine_11.asm:1:10: error: Expected identifier after UNDEFINE
    #undefine ; no name
             ^
t/20-preproc/input/undefine_11.asm:2:17: error: Unexpected token after UNDEFINE: world
    #undefine hello world ; extra tokens
                    ^
# file: t/20-preproc/input/undefine_11.asm
EndOfLine	"\n"	3:1	
symbol	__CPU_Z80__	1	(defined at )
symbol	__CPU_ZILOG__	1	(defined at )
